tests/parse_print/random_perturb/set01/delete-05/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-05/delete-05.essence line 1, column 10:
language name has to be Essence, but given: Essene
    line 1, column 10
    language Essene 1.3
          ^^^^^^^